--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "next lint",
     "start": "next start",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "db:generate": "drizzle-kit generate --config=server/drizzle.config.ts",
+    "db:migrate": "drizzle-kit migrate --config=server/drizzle.config.ts",
+    "db:studio": "drizzle-kit studio --config=server/drizzle.config.ts",
+    "db:push": "drizzle-kit push --config=server/drizzle.config.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-rds-data": "^3.883.0",
     "@emotion/is-prop-valid": "latest",
     "@eslint/eslintrc": "latest",
     "@hookform/resolvers": "^3.9.1",
@@ -46,12 +51,14 @@
     "@tailwindcss/typography": "latest",
     "@tanstack/react-router": "latest",
     "@types/eslint": "latest",
+    "@types/pg": "^8.15.5",
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "drizzle-orm": "^0.44.5",
     "embla-carousel-react": "latest",
     "eslint": "latest",
     "eslint-config-prettier": "latest",
@@ -64,6 +71,8 @@
     "next-themes": "^0.4.4",
     "nuqs": "latest",
     "path": "latest",
+    "pg": "^8.16.3",
+    "postgres": "^3.4.7",
     "prettier": "latest",
     "react": "^19",
     "react-day-picker": "9.8.0",
@@ -86,6 +95,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "^19.1.0-rc.3",
+    "dotenv": "^17.2.2",
+    "drizzle-kit": "^0.31.4",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
